--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -13,315 +13,635 @@ article, aside, canvas, details, embed,
 figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font-family: 'Open Sans', sans-serif;
-  vertical-align: baseline;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font-family: 'Open Sans', sans-serif;
+    vertical-align: baseline;
 }
 
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
-  display: block;
+    display: block;
 }
-* {box-sizing: border-box;}
+
+* {
+    box-sizing: border-box;
+}
 
 body {
-  line-height: 1;
+    line-height: 1;
 }
 
 ol, ul {
-  list-style: none;
+    list-style: none;
 }
 
 blockquote, q {
-  quotes: none;
+    quotes: none;
 }
 
 blockquote:before, blockquote:after,
 q:before, q:after {
-  content: '';
-  content: none;
+    content: '';
+    content: none;
 }
 
 table {
-  border-collapse: collapse;
-  border-spacing: 0;
+    border-collapse: collapse;
+    border-spacing: 0;
 }
 
 body {
-  background-color: #26262b;
-  font-family: 'Open Sans', sans-serif;
+    background-color: #26262b;
+    font-family: 'Open Sans', sans-serif;
 }
-.wrapMenu {width: 98%; max-width: 1600px; margin: auto; padding: 0 30px;}
-.wrap {width: 98%; max-width: 1200px; margin: auto;box-sizing: border-box; padding: 72px 50px 0;position: relative; z-index: 1;}
-.test{text-align: center}
-.test h1 {color:#fff; font-size: 25px; margin-bottom: 15px;}
-.test p {color:hsla(0,0%,100%,.6); margin-bottom: 20px;}
-.headerMenu {-ms-flex: 1 0 auto;-ms-flex-align: center;-webkit-box-align: center;-webkit-box-flex: 1;align-items: center;display: -webkit-box;display: -ms-flexbox;display: flex;flex: 1 0 auto;list-style: none;margin: 0;min-height: 56px;padding: 0;}
-.headerMenu li,a {color:#fff;text-decoration: none;}
 
-.linksAutho {-ms-flex-pack: center;-webkit-box-pack: center;display: -webkit-box;display: -ms-flexbox;display: flex;justify-content: center;}
-.login, .register {-ms-flex-align: center;-ms-flex-pack: center;-webkit-box-align: center;-webkit-box-pack: center;align-items: center;display: -webkit-box;display: -ms-flexbox;display: flex;font-size: 15px;font-weight: 500;justify-content: center;padding: 0;position: relative;z-index: 1;}
-.login{background-color: #fff;color: #18191c;}
-.register{background-color: #7289da;border-radius: 3px;color: #fff;}
+.wrapMenu {
+    width: 98%;
+    max-width: 1600px;
+    margin: auto;
+    padding: 0 30px;
+}
+
+.wrap {
+    width: 98%;
+    max-width: 1200px;
+    margin: auto;
+    box-sizing: border-box;
+    padding: 72px 50px 0;
+    position: relative;
+    z-index: 1;
+}
+
+.test {
+    text-align: center
+}
+
+.test h1 {
+    color: #fff;
+    font-size: 25px;
+    margin-bottom: 15px;
+}
+
+.test p {
+    color: hsla(0, 0%, 100%, .6);
+    margin-bottom: 20px;
+}
+
+.headerMenu {
+    -ms-flex: 1 0 auto;
+    -ms-flex-align: center;
+    -webkit-box-align: center;
+    -webkit-box-flex: 1;
+    align-items: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    flex: 1 0 auto;
+    list-style: none;
+    margin: 0;
+    min-height: 56px;
+    padding: 0;
+}
+
+.headerMenu li, a {
+    color: #fff;
+    text-decoration: none;
+}
+
+.linksAutho {
+    -ms-flex-pack: center;
+    -webkit-box-pack: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    justify-content: center;
+}
+
+.login, .register {
+    -ms-flex-align: center;
+    -ms-flex-pack: center;
+    -webkit-box-align: center;
+    -webkit-box-pack: center;
+    align-items: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    font-size: 15px;
+    font-weight: 500;
+    justify-content: center;
+    padding: 0;
+    position: relative;
+    z-index: 1;
+}
+
+.login {
+    background-color: #fff;
+    color: #18191c;
+}
+
+.register {
+    background-color: #7289da;
+    border-radius: 3px;
+    color: #fff;
+}
 
 .buttonBase-2nT7-z {
-  -webkit-box-shadow: 0 2px 6px 0 rgba(0,0,0,.2);
-  -webkit-transform: translateY(-1px);
-  -webkit-transition: -webkit-box-shadow .3s cubic-bezier(.25,.25,.315,1.35),-webkit-transform .1s linear;
-  border-radius: 3px;
-  box-shadow: 0 2px 6px 0 rgba(0,0,0,.2);
-  height: 45px;
-  margin-right: 40px;
-  transform: translateY(-1px);
-  transition: -webkit-box-shadow .3s cubic-bezier(.25,.25,.315,1.35),-webkit-transform .1s linear;
-  transition: box-shadow .3s cubic-bezier(.25,.25,.315,1.35),transform .1s linear;
-  transition: box-shadow .3s cubic-bezier(.25,.25,.315,1.35),transform .1s linear,-webkit-box-shadow .3s cubic-bezier(.25,.25,.315,1.35),-webkit-transform .1s linear;
-  width: 250px;
+    -webkit-box-shadow: 0 2px 6px 0 rgba(0, 0, 0, .2);
+    -webkit-transform: translateY(-1px);
+    -webkit-transition: -webkit-box-shadow .3s cubic-bezier(.25, .25, .315, 1.35), -webkit-transform .1s linear;
+    border-radius: 3px;
+    box-shadow: 0 2px 6px 0 rgba(0, 0, 0, .2);
+    height: 45px;
+    margin-right: 40px;
+    transform: translateY(-1px);
+    transition: -webkit-box-shadow .3s cubic-bezier(.25, .25, .315, 1.35), -webkit-transform .1s linear;
+    transition: box-shadow .3s cubic-bezier(.25, .25, .315, 1.35), transform .1s linear;
+    transition: box-shadow .3s cubic-bezier(.25, .25, .315, 1.35), transform .1s linear, -webkit-box-shadow .3s cubic-bezier(.25, .25, .315, 1.35), -webkit-transform .1s linear;
+    width: 250px;
 }
+
 .fieldWrap-FPKPdL {
 
-  -webkit-box-sizing: border-box;
-  -webkit-transition: all .35s cubic-bezier(.25,.25,.315,1.35);
-  -webkit-transition-property: background-color;
-  border-radius: 2px;
-  box-sizing: border-box;
-  display: block;
-  font-size: 15px;
-  line-height: 45px;
-  overflow: hidden;
-  transition: all .35s cubic-bezier(.25,.25,.315,1.35);
-  transition-property: all;
-  transition-property: background-color;
-  vertical-align: top;
-  width: 250px;
+    -webkit-box-sizing: border-box;
+    -webkit-transition: all .35s cubic-bezier(.25, .25, .315, 1.35);
+    -webkit-transition-property: background-color;
+    border-radius: 2px;
+    box-sizing: border-box;
+    display: block;
+    font-size: 15px;
+    line-height: 45px;
+    overflow: hidden;
+    transition: all .35s cubic-bezier(.25, .25, .315, 1.35);
+    transition-property: all;
+    transition-property: background-color;
+    vertical-align: top;
+    width: 250px;
 }
-.headerMenu-menu{
-  padding: 8px 0;
+
+.headerMenu-menu {
+    padding: 8px 0;
 }
-.headerMenu li a span {padding: 15px 10px;}
+
+.headerMenu li a span {
+    padding: 15px 10px;
+}
 
 .formHeader {
-  text-align: center;
-  margin-bottom: 20px;
+    text-align: center;
+    margin-bottom: 20px;
 }
+
 .formHeader > h1 {
-  color: #fff;
-  font-size: 26px;
-  line-height: 32px;
-  margin-bottom: 5px;
+    color: #fff;
+    font-size: 26px;
+    line-height: 32px;
+    margin-bottom: 5px;
 }
+
 .formHeader > p {
-  color: #72767d;
-  font-size: 18px;
-  line-height: 22px;
+    color: #72767d;
+    font-size: 18px;
+    line-height: 22px;
 }
 
 .loginForm {
-  border: 1px solid #72767d;
-  padding: 40px;
-  width: 480px;
-  color: #72767d;
-  font-size: 18px;
+    border: 1px solid #72767d;
+    padding: 40px;
+    width: 480px;
+    color: #72767d;
+    font-size: 18px;
 }
 
 .loginForm label a {
-  color: #b9bbbe;
-  font-weight: 600;
-  font-size: 13px;
-  letter-spacing: .5px;
-  text-transform: uppercase;
+    color: #b9bbbe;
+    font-weight: 600;
+    font-size: 13px;
+    letter-spacing: .5px;
+    text-transform: uppercase;
 }
+
 .colorBlue {
-  color: #7289da;
-  margin-bottom: 20px;
-  margin-top: 4px;
-  font-size: 12px;
+    color: #7289da;
+    margin-bottom: 20px;
+    margin-top: 4px;
+    font-size: 12px;
 }
-.needAcc{
-  font-size: 12px;
-  color: #72767d;
+
+.needAcc {
+    font-size: 12px;
+    color: #72767d;
 }
+
 .colorBlue:hover {
-  text-decoration: underline;
+    text-decoration: underline;
 }
+
 .field, .submit {
-  position: relative;
-  display: block;
-  width: 100%;
-  padding: 10px;
-  margin: 10px 0;
+    position: relative;
+    display: block;
+    width: 100%;
+    padding: 10px;
+    margin: 10px 0;
 }
+
 .submit {
-  background-color: #7289da;
-  color: #fff;
-  border: #7289da;
+    background-color: #7289da;
+    color: #fff;
+    border: #7289da;
 }
+
 .submit:hover {
-  cursor: pointer;
+    cursor: pointer;
 }
 
 .alert {
-  padding: 20px;
-  background-color: #f44336;
-  color: white;
-  opacity: 1;
-  transition: opacity 0.6s;
-  margin-bottom: 15px;
+    padding: 20px;
+    background-color: #f44336;
+    color: white;
+    opacity: 1;
+    transition: opacity 0.6s;
+    margin-bottom: 15px;
 }
 
-.alert.success {background-color: #4CAF50;}
-.alert.info {background-color: #2196F3;}
-.alert.warning {background-color: #ff9800;}
+.alert.success {
+    background-color: #4CAF50;
+}
 
+.alert.info {
+    background-color: #2196F3;
+}
+
+.alert.warning {
+    background-color: #ff9800;
+}
 
 #textarea {
-  width: 100%;
+    position: relative;
+}
+
+#textarea, #text {
+    width: 100%;
+    box-sizing: border-box;
+}
+
+#textarea button {
+    position: absolute;
+    top: 16px;
+    right: 0;
+    height: 60px;
+    width: 100px;
+    background-color: #B10DC9;
+    border: none;
+    color: #fff;
+}
+
+.signupbtn i {
+    font-size: 20px;
 }
 
 #text {
-  width: 100%;
-  resize: none;
-  background-color: #26262b;
-  margin: 15px 0 15px 0;
-  border: 1px solid #38373a;
-  color: #858586;
-  padding: 15px;
+    width: 100%;
+    resize: none;
+    background-color: #26262b;
+    margin: 15px 0 15px 0;
+    border: 1px solid #38373a;
+    color: #858586;
+    padding: 15px;
 }
 
 #chatroom {
-  overflow: auto;
-  height: 500px;
-  border: 1px solid #38373a;
+    overflow: auto;
+    height: 500px;
+    border: 1px solid #38373a;
 }
 
 ::-webkit-scrollbar {
-  -webkit-appearance: none;
-  width: 7px;
+    -webkit-appearance: none;
+    width: 7px;
 }
 
 ::-webkit-scrollbar-thumb {
-  border-radius: 4px;
-  background-color: rgba(0, 0, 0, .5);
-  -webkit-box-shadow: 0 0 1px rgba(255, 255, 255, .5);
+    border-radius: 4px;
+    background-color: rgba(0, 0, 0, .5);
+    -webkit-box-shadow: 0 0 1px rgba(255, 255, 255, .5);
 }
 
 .typing {
-  width: 100%;
-  text-align: center;
-  background-color: #2196f3;
-  padding: 3px 0 3px 0;
+    width: 100%;
+    text-align: center;
+    background-color: #2196f3;
+    padding: 3px 0 3px 0;
 }
 
 .typing i {
-  color: #fff;
+    color: #fff;
 }
 
 .message {
-  color: #255d7d;
-  padding: 15px;
-  word-wrap: break-word;
-  margin: 15px;
-  border-left: 3px solid #B10DC9;
+    color: #255d7d;
+    padding: 15px;
+    word-wrap: break-word;
+    margin: 15px;
+    border-left: 3px solid #B10DC9;
 }
 
 .chip {
-  display: block;
-  padding: 0 25px;
-  height: 50px;
-  font-size: 16px;
-  line-height: 50px;
-  border-radius: 25px;
-  background-color: #858586;
-  min-width: 100px;
-  margin: 0 0 15px 0;
+    display: block;
+    padding: 0 25px;
+    height: 50px;
+    font-size: 16px;
+    line-height: 50px;
+    border-radius: 25px;
+    background-color: #858586;
+    min-width: 100px;
+    margin: 0 0 15px 0;
 }
 
 .chip img {
-  float: left;
-  margin: 0 10px 0 -25px;
-  height: 50px;
-  width: 50px;
-  border-radius: 50%;
+    float: left;
+    margin: 0 10px 0 -25px;
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
 }
 
 .clearfix {
-  clear: bottom;
-  content: "";
+    clear: bottom;
+    content: "";
 }
+
 .dot {
-  height: 10px;
-  width: 10px;
-  -webkit-border-radius: 50%;
-  -moz-border-radius: 50%;
-  border-radius: 50%;
-  display: inline-block;
-  background-color: chartreuse;
+    height: 10px;
+    width: 10px;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    border-radius: 50%;
+    display: inline-block;
+    background-color: chartreuse;
 }
 
 .avatar {
-  vertical-align: middle;
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
+    vertical-align: middle;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
 }
 
 .groups-container, .chat-container, .user-container {
-  display: inline-block;
-  float: left;
-}
-.groups-container {
-  text-align: center;
-}
-.container  h1, h2, h3, p, .roomField{
-  padding: 10px;
+    display: inline-block;
+    float: left;
 }
 
 .groups-container {
-  width: 5%;
+    text-align: center;
+}
+
+.container h1, h2, h3, p, .roomField {
+    padding: 10px;
+}
+
+.groups-container {
+    width: 5%;
 }
 
 .chat-container {
-  width: 80%;
+    width: 80%;
 }
 
 .user-container {
-  width: 15%;
+    width: 15%;
 }
 
 #users {
-  padding: 15px;
+    max-height: 300px;
+    min-height: 300px;
+}
+
+.friendListHeader, .userListHeader {
+    text-align: center;
+}
+
+.userStatus {
+    color: mediumspringgreen;
+    font-size: 13px;
+}
+
+.settings-container a {
+    display: block;
+    margin-bottom: 10px;
+}
+
+.settings-container a i {
+    font-size: 40px;
 }
 
 .rooms {
-  background-color: #7289dc;
-  width: 100%;
-  padding: 10px 0 10px 0;
-  color: #fff;
-  margin: 0 0 10px 0;
+    background-color: #7289dc;
+    width: 100%;
+    padding: 10px 0 10px 0;
+    color: #fff;
+    margin: 0 0 10px 0;
+}
+
+#rooms {
+    margin: 0 0 10px 0;
+}
+
+#myRooms a i {
+    font-size: 40px;
+    margin-bottom: 10px;
 }
 
 /* Clear floats */
 .clearfix::after {
-  content: "";
-  clear: both;
-  display: table;
+    content: "";
+    clear: both;
+    display: table;
 }
 
 /* Change styles for cancel button and signup button on extra small screens */
 @media screen and (max-width: 300px) {
-  .cancelbtn, .signupbtn {
-    width: 100%;
-  }
+    .cancelbtn, .signupbtn {
+        width: 100%;
+    }
 }
 
 /* Orange Colors*/
 .ActiveRoom {
-  color: #EE7600;
+    color: #EE7600;
 }
+
 .message-container {
-  border: 1px solid #34363c;
+    border: 1px solid #34363c;
+}
+
+
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: #474e5d;
+    padding-top: 20px;
+}
+
+.call-modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    padding-top: 20px;
+    justify-content: center;
+}
+
+.modal-content {
+    background-color: #26262b;
+    margin: 1% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
+    width: 80%; /* Could be more or less, depending on screen size */
+    min-height: 700px;
+    color: #fff;
+}
+
+.close {
+    position: absolute;
+    right: 35px;
+    top: 15px;
+    font-size: 40px;
+    font-weight: bold;
+    color: #ffffff;
+}
+
+.close:hover {
+    cursor: pointer;
+}
+
+.card {
+    position: relative;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+    border-radius: 5px;
+    background-color: #fff;
+    max-height: 600px;
+    width: 15%;
+}
+
+.call-buttons-container {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+}
+
+.call-buttons-container button {
+    box-sizing: border-box;
+    width: 50%;
+    border: none;
+    padding: 10px;
+}
+
+.accept {
+    background-color: #4CAF50;
+    color: #fff;
+}
+
+.decline {
+    background-color: #DC143C;
+    color: #fff;
+}
+
+.card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+
+img {
+    border-radius: 5px 5px 0 0;
+}
+
+.card-container {
+    padding: 2px 16px;
+}
+
+.find-user-container {
+    display: flex;
+    flex-direction: inherit;
+    padding: 10px;
+    border-bottom: 1px solid #FF8C00;
+}
+
+.find-user-container div {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+}
+.invite-friend {
+    font-size: 20px;
+    color: #fa8272;
+}
+
+.find-user-profileImage {
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+}
+.notifications {
+    background-color: #ed6f70;
+}
+
+.notification-message {
+    color: #fff;
+    padding: 5px;
+    text-align: center;
+    font-size: 15px;
+}
+
+.dropdown-content {
+    display: none;
+    flex-direction: column;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    width: 15%;
+}
+.notifications:hover .dropdown-content {display: flex;}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.user-fr-request-list {
+    color: #000;
+    display: flex;
+    align-items: center;
+    padding: 10px;
+}
+
+.user-fr-request-list div img {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+}
+
+
+.user-fr-request-list div {
+    padding: 10px;
+}
+
+.request-name-lis {
+    width: 100px;
 }
