--- a/views/app.pug
+++ b/views/app.pug
@@ -36,6 +36,17 @@ body
         span(class="close" title="Close Modal") &times;
         div(class="modal-content")
 
+
+    div(id="id05" class="modal chatModal")
+        div(class="modal-content")
+            div(class="windowBar")
+                div(class="column")
+                    span(class="bar-dot minApplication" style="background:#ED594A;")
+                    span(class="bar-dot fullApplication" style="background:#FDD800;")
+                    span(class="bar-dot closeApplication" style="background:#5AC05A;")
+                    div(class="clearfix")
+            div(class="chat-modal-content")
+
     div(class="groups-container")
         div
             h2(class="rooms") ROOMS
@@ -71,3 +82,4 @@ body
         div(class="friendList")
             h2(class="rooms friendListHeader") Friends
             div(class="notifications")
+            div(class="list-my-friends")
