--- a/views/register.pug
+++ b/views/register.pug
@@ -19,5 +19,5 @@ block content
             a(class="colorBlue" href="/forgot") Forgot your password ?
 
             input(class="submit" type="submit")
-            p.needAcc Need an account?
-                a(class="colorBlue" href="/users/register") Register
+            p(class="needAcc") Have account ?
+                a(class="colorBlue" href="/users/login")  Login
