--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,6 +1,7 @@
 doctype html
 html
     head
+        link(href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet")
         link(rel="stylesheet" href="/stylesheets/style.css")
         script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js")
     body
